samples/_failures_safe/1761199062_a9e4b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b1ecdba.c: In function ‘main’:
./samples/SAFE/__tmp_4b1ecdba.c:174:5: error: expected declaration or statement at end of input
  174 |     char buffer[1024] = {0};
      |     ^~~~
